; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-imx.c_i2c_imx_dma_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-imx.c_i2c_imx_dma_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx_i2c_struct = type { %struct.imx_i2c_dma* }
%struct.imx_i2c_dma = type { i32*, i32*, i32*, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.imx_i2c_struct*)* @i2c_imx_dma_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2c_imx_dma_free(%struct.imx_i2c_struct* %0) #0 {
  %2 = alloca %struct.imx_i2c_struct*, align 8
  %3 = alloca %struct.imx_i2c_dma*, align 8
  store %struct.imx_i2c_struct* %0, %struct.imx_i2c_struct** %2, align 8
  %4 = load %struct.imx_i2c_struct*, %struct.imx_i2c_struct** %2, align 8
  %5 = getelementptr inbounds %struct.imx_i2c_struct, %struct.imx_i2c_struct* %4, i32 0, i32 0
  %6 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %5, align 8
  store %struct.imx_i2c_dma* %6, %struct.imx_i2c_dma** %3, align 8
  %7 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %3, align 8
  %8 = getelementptr inbounds %struct.imx_i2c_dma, %struct.imx_i2c_dma* %7, i32 0, i32 4
  store i64 0, i64* %8, align 8
  %9 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %3, align 8
  %10 = getelementptr inbounds %struct.imx_i2c_dma, %struct.imx_i2c_dma* %9, i32 0, i32 3
  store i64 0, i64* %10, align 8
  %11 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %3, align 8
  %12 = getelementptr inbounds %struct.imx_i2c_dma, %struct.imx_i2c_dma* %11, i32 0, i32 2
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @dma_release_channel(i32* %13)
  %15 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %3, align 8
  %16 = getelementptr inbounds %struct.imx_i2c_dma, %struct.imx_i2c_dma* %15, i32 0, i32 2
  store i32* null, i32** %16, align 8
  %17 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %3, align 8
  %18 = getelementptr inbounds %struct.imx_i2c_dma, %struct.imx_i2c_dma* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @dma_release_channel(i32* %19)
  %21 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %3, align 8
  %22 = getelementptr inbounds %struct.imx_i2c_dma, %struct.imx_i2c_dma* %21, i32 0, i32 1
  store i32* null, i32** %22, align 8
  %23 = load %struct.imx_i2c_dma*, %struct.imx_i2c_dma** %3, align 8
  %24 = getelementptr inbounds %struct.imx_i2c_dma, %struct.imx_i2c_dma* %23, i32 0, i32 0
  store i32* null, i32** %24, align 8
  ret void
}

declare dso_local i32 @dma_release_channel(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
